@@ -24,6 +24,7 @@ A=129:  INKEY. As with BASIC INKEY, scanning for range of keys not supported.
 A=130:	High word of user memory.
 A=131:	Bottom of user memory.
 A=132:	Top of user memory
+A=134:  Return text cursor position in X and Y. Identical to 165.
 A=160:	Read VDU variable (equivalent to VDU(X%))
 A=163:	Application Support - all these are local to Brandy,
 	old implementation moved from 42 with a few changes
@@ -36,5 +37,6 @@ A=163:	Application Support - all these are local to Brandy,
 	X=3: Set the interval for checking ESCAPE, multiplied by 256.
 	X=127: Analogue of Linux's "stty sane" - enables Refresh, issues a
 	       VDU 6 and sets both video bank controls to 0.
+A=165:  Return text cursor position in X and Y. Identical to 134.
 A=200:	Set ESCAPE and BREAK effect - only ESCAPE effect supported.
 A=229:	Enable or disable ESCAPE, disabled if X non-zero.
